--- a/KoansRunner.html
+++ b/KoansRunner.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="lib/jasmine/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine/jskoans-jasmine-html.js"></script>
-  
+
   <script type="text/javascript" src="lib/underscore-min.js"></script>
 
   <script type="text/javascript" src="lib/FILL_ME_IN.js"></script>
@@ -23,6 +23,7 @@
 
 </head>
 <body>
+  <h1>Test!</h1>
 
 <script type="text/javascript">
   jasmine.getEnv().addReporter(new JsKoansReporter());
